# wimhof

./: .gitattributes  .gitignore  README.md  config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
.zed/: tasks.json
assets/: sources.md
demo/: demo-v.0.1.0.webm  demo.webm
src/wimhof/: config.yaml  main.py
src/wimhof/assets/: sources.md
src/wimhof/presets/: 4-7-8.yaml  Box-Breathing.yaml
