[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wimhof"
version = "0.1.0"
description = "Atmospheric desktop breathing trainer inspired by the Wim Hof method."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.11.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
wimhof = "wimhof.main:main"

[[project.authors]]
name = "Sergey (dmi3s) Dmitriev"
email = "dmi3evsv@gmail.com"

[[project.authors]]
name = "ChatGPT"

