[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wimhof"
version = "0.1.0"
description = "Atmospheric desktop breathing trainer inspired by the Wim Hof method."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.11.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
wimhof = "wimhof.main:main"

[[project.authors]]
name = "Sergey (dmi3s) Dmitriev"
email = "dmi3evsv@gmail.com"

[tool.hatch.build.targets.wheel]
packages = ["src/wimhof"]

[tool.hatch.build]
include = [
  "src/wimhof/*.py",
  "src/wimhof/assets/*",
  "src/wimhof/config.yaml",
  "demo/demo-v.0.1.0-preview.jpg",
  "README.md",
  "LICENSE",
  ".gitignore",
  ".gitattributes",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Artistic Software",
]
