[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wimhof"
version = "0.1.1"
description = "Atmospheric desktop breathing trainer inspired by the Wim Hof method."
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
    "pyside6>=6.11.1",
    "pyyaml>=6.0.3",
]

keywords = [
    "python",
    "qt",
    "animation",
    "breathing exercises",
    "wim hof",
]

classifiers = [
  "Development Status :: 4 - Beta",

  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",

  "License :: OSI Approved :: MIT License",

  "Operating System :: OS Independent",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",

  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Scientific/Engineering :: Human Machine Interfaces",
  "Topic :: Software Development :: Libraries :: Application Frameworks",

  "Environment :: X11 Applications :: Qt",
]


[project.gui-scripts]
wimhof = "wimhof.main:main"

[[project.authors]]
name = "Sergey (dmi3s) Dmitriev"
email = "dmi3evsv@gmail.com"

[[project.maintainers]]
name = "Sergey (dmi3s) Dmitriev"
email = "dmi3evsv@gmail.com"

[dependency-groups]
dev = [
    "types-PyYAML>=6.0.12",
    "debugpy>=1.8.20",
    "mypy>=2.1.0",
    "ruff>=0.15.14",
]

[tool.mypy]
python_version = "3.12"
install_types = false
strict = false
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
pretty = true


[tool.hatch.build.targets.wheel]
packages = ["src/wimhof"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/wimhof",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]
exclude = [
  "/demo",
  "*.pyc",
  "__pycache__",
  "/.zed",
]

[project.urls]
Repository = "https://github.com/dmi3s/wimhof"
Homepage = "https://github.com/dmi3s/wimhof"
Issues = "https://github.com/dmi3s/wimhof/issues"
